--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.1.8"
+  },
+  "volta": {
+    "node": "18.8.0"
   }
 }
